numOfTasks defined in properties+ test work start